WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
284907
Fix PlayStation build following
288001@main
, attempt three
https://bugs.webkit.org/show_bug.cgi?id=284907
Summary
Fix PlayStation build following 288001@main, attempt three
Ross Kirsling
Reported
2024-12-18 15:02:14 PST
.
Attachments
Add attachment
proposed patch, testcase, etc.
Ross Kirsling
Comment 1
2024-12-18 15:51:06 PST
Pull request:
https://github.com/WebKit/WebKit/pull/38165
EWS
Comment 2
2024-12-18 15:56:44 PST
Committed
288049@main
(15554224e3af): <
https://commits.webkit.org/288049@main
> Reviewed commits have been landed. Closing PR #38165 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2024-12-18 15:57:14 PST
<
rdar://problem/141714831
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug