Fix PlayStation build following 288001@main, attempt three https://bugs.webkit.org/show_bug.cgi?id=284907

Unreviewed build fix.

* Source/WebKit/UIProcess/Launcher/playstation/ProcessLauncherPlayStation.cpp:
(WebKit::ProcessLauncher::launchProcess):

Canonical link: https://commits.webkit.org/288049@main