Source/WebKit/UIProcess/Launcher/playstation/ProcessLauncherPlayStation.cpp
@@ -97,8 +97,8 @@ void ProcessLauncher::launchProcess()
 
     // We've finished launching the process, message back to the main run loop.
     RefPtr<ProcessLauncher> protectedThis(this);
-    RunLoop::main().dispatch([=] {
-        protectedThis->didFinishLaunchingProcess(appLocalPid, IPC::Connection::Identifier { WTFMove(socketPair.server) });
+    RunLoop::main().dispatch([&] {
+        protectedThis->didFinishLaunchingProcess(appLocalPid, IPC::Connection::Identifier({ socketPair.server.value(), UnixFileDescriptor::Adopt }));
     });
 }
 
